# planx-ml

./: .env.example  .gitignore  10Sept_trial_Qwen3_(4B)_Instruct.ipynb  README.md  fetch_gemini.ipynb  gpt_oss.ipynb  inference.ipynb  pyproject.toml  qwen3_4b_instruct.ipynb  qwen3_4b_instruct.py  send.sh  setup.sh  ssh.sh  sync.sh  train.py
